--- a/client/src/DarkApp.css
+++ b/client/src/DarkApp.css
@@ -119,6 +119,10 @@ select:hover {
   color: white;
 }
 
+#Dark #update-password-container a {
+  color: white;
+}
+
 #Dark ::placeholder {
   color: white;
 }
